refactor: 하드코딩되어 있던 스트링 리터럴 상수화